--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+  ::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
+
+.scroll-hide {
+  -ms-overflow-style: none; /* Internet Explorer and Edge */
+  scrollbar-width: none; /* Firefox */
+}
